fixed spacing in share buttons

--- a/app/src/main/assets/style.css
+++ b/app/src/main/assets/style.css
@@ -308,6 +308,25 @@ img .alignnone {
     width: 100% !important;
 }
 
+#header {
+    z-index: -1;
+}
+
+#header img {
+   /*position:fixed;*/
+   width: 100%;
+   height:auto;
+   left: 0;
+   top: 0;
+   z-index: -1;
+}
+
+#container {
+    top:0;
+    position:relative;
+    z-index: 99;
+}
+
 .wp-caption img {
     margin-bottom:0;
 }
